# dana

./: .coverage  .coverage.ctnm1b.local.91915.XFeLKySx  .cursorrules  .cursorrules.bak  .env.example  .flake8  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .pyproject.toml.swp  .ruff.toml  .vscode.launch.json.example  404.html  ABOUT_DOCS.md  ABOUT_OPENDXA.md  CHANGES-LLM-INTEGRATION.md  CLAUDE.md  CLAUDE.md.example  COMMUNITY.md  COMPOUND_ASSIGNMENT_TEST_CHECKLIST.md  CONCURRENCY_TESTS_SUMMARY.md  DEPRECATED_REGISTRIES_REMOVAL_PLAN.md  INTERPRETER-REFACTORING.md  LAMBDA_IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.md  LLMS.md  Makefile  PR_181_DESCRIPTION.md  PR_181_REVIEW_INSTRUCTIONS.md  PR_222_UPDATED.md  PR_FEAT_POET_CONT_TO_MAIN.md  PR_NOT_IN_OPERATOR.md  README.md  REORGANIZATION_SUMMARY.md  RUN_ME.sh  SIMULATION_INSTRUCTIONS.md  TECH-SETUP.md  (+81 more)
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md  pull_request_template_knows.md
.poet/: mock_hvac_function_building_management_params.json
.refactoring_results/: baseline_results.json
ROADMAP/: index.html
archive/: index.html
configs/: mcp_demo.yaml
dana/: __init__.na  __init__.py  __main__.py  dana_config.json  dana_config.json.example  function_composition_demo.na  original_func.na  simple_module.na  to_dana  weather_in_paris.na
dana/libs/stdlib/domain_packs/maritime_nav/: .gitignore  Makefile  README.md  make.bat  pyproject.toml
dana/libs/stdlib/domain_packs/maritime_nav/Maritime-Navigation/: README.md  USAGE.md  maritime_navigation.na  run-maritime-navigation  run-maritime-navigation.bat  utils.na
dana/libs/stdlib/domain_packs/maritime_nav/Maritime-Navigation/.input/: crossing-scenario.txt  head-on-scenario.txt  overtaking-scenario.txt  scenario.txt
dana/libs/stdlib/domain_packs/maritime_nav/Maritime-Navigation/expertise/: calculation.py  collision_analysis.na
dana/libs/stdlib/domain_packs/maritime_nav/Maritime-Navigation/resources/: colregs_database.txt  environmental_data.txt  historical_incidents.txt  navigation_rules.txt  vessel_registry.txt
demos/: README.md  corrected_return_vs_deliver_demo.na  debug_ast_structure.na  debug_promise_before_resolution.na  debug_promise_creation.na  debug_promise_direct.na  debug_promise_object.na  debug_promise_transparency.na  debug_return_exception.na  eager_promise_guaranteed_non_blocking_demo.na  eager_promise_non_blocking_demo.na  explicit_access_test.na  final_return_vs_deliver_demo.na  full_promise_test.na  investigation_test.na  promise_display_demo.na  promise_inspection_demo.na  promise_logging_demo.na  return_vs_deliver_demos.na  simple_eager_promise_test.na  simple_lazy_test.na  simple_promise_inspection.na  simple_return_vs_deliver_demo.na  simple_return_vs_deliver_test.na  test_console_logging_fix.py  test_log_panel.na  test_true_lazy_evaluation.na  test_tui_logging.py  test_tui_logging_fix.na  tui_logging_demo.na
design/: index.html
designs/: index.html
docs/: .gitignore  README.md  REQUIREMENTS.md  ROADMAP.md  core-concepts.md  dana_language.md  gen_ref_pages.py  index.md  install.md  local-ollama-setup.md  opendxa.html  pipeline_usage.md  quickstart.md  tech-setup.md  vllm-integration.md
dxa/: README.md  __init__.py  dxa_factory.py
dxa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: 13_corelib_math_and_text_functions.na  ADVANCED_PATTERNS.md  CORE_CONCEPTS.md  EXAMPLE_ROADMAP.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  README.md  REAL_WORLD_APPLICATIONS.md  REORGANIZATION.md  SUMMARY.md  __init__.py  automation_web.py  chat_bot.py  collaborative.py  collaborative_research.py  converse_demo.py  data_analysis.py  decision_tree_test.na  eager_promise_demo.na  event_handler_demo.py  function_composition_demo_new.na  generic_registry_types_demo.py  improved_yaml_structure_examples.py  interactive_math.py  lambda_examples.na  llm_guided_test.na  math_solver.py  math_tutor.py  research_assistant.py  research_task.py  resource_keyword_demo.na  run_function_composition_demo.py  run_simple_workflow.py  simple_agent_demo.na  simple_qa.py  simple_workflow.yaml  simple_workflow_demo.py  specialized_registries_demo.py  square_root_test.na  struct_docstring_demo.na  (+16 more)
for-contributors/: index.html
for-engineers/: index.html
for-evaluators/: index.html
for-investors/: index.html
for-researchers/: index.html
history/: cot_function_resolution_analysis.na  cot_summary.na  debug_composition_cot.na  debug_comprehensive_cot.na  debug_context_cot.na  debug_discrepancy_cot.na  debug_line_by_line.na  debug_parse_debug.na  debug_simple_assignment.na  debug_solution_cot.na  final_solution_demo.na  minimal_repro.na  test_basic.na  test_comment_newline.na  test_composition.na  test_composition_fixed.na  test_cursor.na  test_newline_fix.na  test_no_comment.na  test_parse_debug.na  working_composition_demo.na
mcp/: config.yaml
opendxa/: README.md  __init__.py  opendxa_config.json
opendxa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pipeline_usage/: index.html
reference/: index.html
scripts/: categorize_tests.py  cleanup_docs_formatting.py  cleanup_function_call_implementation.py  enable_new_function_call_implementation.py  test-parallel.py  test_github_actions.py  validate_workshop_ci.py
search/: search_index.json
test_na/: README.md  agent.na  methods.na  test_na_files.py
tests/: README.md  conftest.py  test_agent_mind_integration.py  test_exception_variable_assignment.py  test_new_registry.py  test_specialized_registries.py  test_world_model.py
tmp/: CHANGES-LLM-INTEGRATION.md  DATA_ANALYSIS_IPV_SUMMARY.md  INTERPRETER-ARCHITECTURE.md  INTERPRETER-REFACTORING-SUMMARY.md  INTERPRETER-REFACTORING.md  IPV_IMPLEMENTATION_STATUS.md  IPV_PHASE2_SUMMARY.md  IPV_PHASE3_SUMMARY.md  IPV_PHASE4_SUMMARY.md  LLMS.md  PARSER-SIMPLIFICATION.md  README-REPL-FIX.md  REFACTORING_SUMMARY.md  TODO-2024-12-19.md  analyze_function_execution_bug.py  basic_sandbox_test.py  cursor_discuss_mcp_and_a2a_integration.md  cursor_discussing_security_consideratio.md  dana_llm_state_integration.na  (+125 more)
(+5011 files in other folders)
