# pyproject.toml - Dana Project Configuration
# Copyright © 2025 Aitomatic, Inc. Licensed under the MIT License.

# =============================================================================
# Build System Configuration
# =============================================================================

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# =============================================================================
# Project Metadata & Dependencies
# =============================================================================

[project]
name = "dana"
version = "0.4.0"
description = "Domain-Aware Neurosymbolic Agents"
requires-python = ">=3.12"
authors = [
    {name = "Christopher Nguyen", email = "ctn@aitomatic.com"},
]

# Production dependencies - keep minimal and well-organized
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings",
    "python-dotenv",
    "click",
    "click-default-group",
    "rich",
    "tenacity",
    "google-genai",
    "fastmcp",
    "anthropic<1.0.0",
    "openai<2.0.0",
    "aisuite<1.0.0",
    "litellm<2.0.0",
    "instructor<2.0.0",
    "httpx",
    "ollama<1.0.0",
    "toml",
    "PyYAML",
    "jinja2",
    "aiofiles",
    "anyio",
    "trio",
    "asyncio-mqtt",
    "httpcore",
    "psutil",
    "packaging",
    "jsonschema",
    "toolz",
    "more-itertools",
    "python-dateutil",
]

# Development-only dependencies
[project.optional-dependencies]
dev = [
    "ruff",        # Fast Python linter (replaces flake8, isort, etc.)
    "pylint",      # Additional code analysis
    "mypy",        # Static type checking
    "pre-commit",  # Git hooks for code quality
    "pytest-cov", # Test coverage reporting
]

# Testing framework - moved from core since not all users need to run tests
testing = [
    "pytest",
    "pytest-asyncio", 
    "pytest-mock",
]

# Data science and scientific computing - heavy dependencies for specialized use cases
data = [
    "pandas",              # Data manipulation and analysis
    "scipy>=1.16.0",       # Scientific computing
    "scikit-learn>=1.7.0", # Machine learning
    "numpy",               # Numerical computing (required by above)
]

# Data visualization - optional for users who need plotting capabilities
visualization = [
    "matplotlib",
    "seaborn",
]

# Web server capabilities - optional for users who need web interfaces
web = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
]

# Browser automation - heavy dependency, optional for web scraping use cases
automation = [
    "playwright",
]

# Documentation tooling - focused on auto-sync and validation
docs = [
    # Core: MkDocs for DevRel team productivity
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.12",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "pymdown-extensions[extra]>=10.15",

    # Auto-sync with code (solves staleness problem)
    "mkdocstrings[python]>=0.24",    # API docs from docstrings (auto-update)
    "mkdocs-gen-files",              # Generate docs from code structure
    "mkdocs-literate-nav",           # Auto-generate navigation

    # Validation tools (catch problems early)
    "mkdocs-htmlproofer-plugin",     # Broken link detection
    "linkcheckmd",                   # Fast async link checking
    "doc8",                          # Documentation style checking

    # Multi-constituency features
    "mkdocs-redirects",              # Handle URL changes
    "mkdocs-awesome-nav",            # Advanced navigation control
    "mkdocs-print-site-plugin",      # PDF export for offline reading

    # Content enhancement
    "mkdocs-include-markdown-plugin",# Reusable content blocks
    "mkdocs-macros-plugin",          # Variables and templating
    "mkdocs-table-reader-plugin",    # Data tables from CSV/JSON
]

# Complete development environment - includes all optional dependencies
full = [
    "dana[dev,testing,data,visualization,web,automation,docs]"
]

# Command-line entry points for end users
[project.scripts]
dana = "dana.core.cli.dana:main"

# =============================================================================
# Package Configuration
# =============================================================================

[tool.setuptools]
# Use find_packages to automatically discover all subpackages
[tool.setuptools.packages.find]
where = ["."]
include = ["dana*"]
exclude = ["tests*", "examples*", "docs*", "tmp*"]

[tool.setuptools.package-data]
dana = ["**/*.py", "**/*.lark"]

# =============================================================================
# Development Tools & Scripts (uv-specific)
# =============================================================================

# DEPENDENCY GROUPS USAGE:
# - Core installation: pip install dana
# - With testing: pip install dana[testing] 
# - With data science: pip install dana[data]
# - With visualization: pip install dana[visualization]
# - With web server: pip install dana[web]
# - With browser automation: pip install dana[automation]
# - With documentation tools: pip install dana[docs]
# - Full development setup: pip install dana[full]
# - Development only: pip install dana[dev]
# 
# Using uv:
# - uv sync                           # Core dependencies only (lightweight!)
# - uv sync --extra testing          # Include testing tools
# - uv sync --extra data             # Include pandas/scipy/sklearn
# - uv sync --extra visualization    # Include matplotlib/seaborn
# - uv sync --extra full             # All optional dependencies

# NOTE: Native task runner support ([tool.uv.tasks] or [tool.uv.scripts])
# is planned but not yet available in uv 0.7.9
#
# Use these direct uv run commands for common development tasks:
#
# Testing workflows (requires dana[testing] or dana[dev]):
#   uv sync --extra testing                           # Install testing dependencies first
#   uv run pytest tests/                              # Run all tests
#   uv run pytest -m 'not live and not deep' tests/   # Fast tests only  
#   uv run pytest -m 'live' tests/                    # Live/integration tests
#   uv sync --extra dev && uv run pytest --cov-report=html tests/  # With coverage
#
# Code quality workflows:
#   uv run ruff check .                               # Lint code
#   uv run ruff check --fix .                         # Lint and auto-fix
#   uv run ruff format .                              # Format code
#   uv run ruff format --check .                      # Check formatting
#   uv run mypy .                                     # Type checking
#
# Documentation workflows (requires dana[docs]):
#   uv sync --extra docs                              # Install documentation dependencies first
#   uv run python -m mkdocs serve                     # Live preview during writing
#   uv run python -m mkdocs serve --dev-addr=0.0.0.0:8000  # Live preview (remote accessible)
#   uv run python -m mkdocs build                     # Build docs
#   uv run python -m mkdocs build --strict            # Build with warnings as errors
#   uv run mkdocs gh-deploy --force                   # Build and deploy to GitHub Pages
#
# Documentation validation (requires dana[docs] + dana[testing]):
#   uv sync --extra docs --extra testing              # Install both doc and testing dependencies
#   uv run pytest --doctest-modules dana/             # Test code examples in docstrings
#   uv run python -m linkcheckmd docs/                # Check all markdown links (fast async)
#   uv run doc8 docs/                                 # Documentation style checking
#   uv run python -m mkdocs build --strict            # Validate complete build
#
# Environment management:
#   uv sync                                           # Sync core dependencies only
#   uv sync --extra dev                               # Sync with dev dependencies
#   uv sync --extra testing                           # Sync with testing tools
#   uv sync --extra data                              # Sync with data science libraries
#   uv sync --extra visualization                     # Sync with plotting libraries
#   uv sync --extra web                               # Sync with web server tools
#   uv sync --extra automation                        # Sync with browser automation
#   uv sync --extra docs                              # Sync with documentation tools
#   uv sync --extra full                              # Sync with all optional dependencies
#   uv add <package>                                  # Add new dependency
#   uv remove <package>                               # Remove dependency
#
# Dana-specific commands:
#   uv run python -m dana.core.repl.dana examples/dana/debug_tests/test_basic.na
#   uv run python -m dana.core.repl.repl.repl
#
# When native task support is added, these will become:
# [tool.uv.tasks]
# test = "pytest tests/"
# lint = "ruff check ."
# format = "black ."

# =============================================================================
# Code Quality Tools
# =============================================================================

# Code Formatting
[tool.black]
line-length = 140
target-version = ["py312"]  # Align with requires-python

# Linting (Primary)
[tool.ruff]
line-length = 140
target-version = "py312"    # Align with requires-python

[tool.ruff.lint]
# Enable these rule categories
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # bugbear (common Python gotchas)
    "UP",  # pyupgrade (modern Python features)
    "N801", "N803", "N804",  # naming conventions (classes & functions only)
    "F821", "F822", "F841", "F401",  # undefined names, unused variables/imports
]

# Disable these specific rules
ignore = [
    "E203",  # Whitespace before ':' (conflicts with Black)
    "E501",  # Line too long (handled by line-length setting)
    "B008",  # Function call in default argument (common in frameworks)
    "B010",  # setattr in class body (common in frameworks)
    "B904",  # raise ... from ... (not always needed)
    "N802",  # Function name should be lowercase (conflicts with transformers)
]

# Files/directories to skip
exclude = [
    "*.na",              # Dana language files (not Python)
    ".git",              # Version control
    ".venv",             # Virtual environment
    "dana.egg-info",  # Build artifacts
]

# Type Checking
[tool.pyright]
reportAttributeAccessIssue = false
reportGeneralTypeIssues = false
reportAssignmentType = false

# MyPy Configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# Per-module options for gradual adoption
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "dana.core.lang.interpreter.*"
disallow_untyped_defs = true  # Strict checking for core interpreter

# =============================================================================
# Package Manager Configuration (uv)
# =============================================================================

[tool.uv]
package = true

# Enable preview features for scripts support
preview = true

# Dependency resolution strategy
resolution = "highest"      # Always use highest compatible versions
prerelease = "disallow"     # Avoid pre-release versions in production

# Python environment preferences
python-preference = "only-managed"  # Use uv-managed Python installations
compile-bytecode = true             # Pre-compile .pyc files for performance

# Future: Custom dependency sources
[tool.uv.sources]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
# dana = { workspace = true }  # For workspace/monorepo setup

# Future: Workspace configuration for multi-package projects
# [tool.uv.workspace]
# members = ["dana", "extensions/*"]
