[project]
name = 'Furuno-Dana'

version = '1.0.0'

description = "Furuno's Dana Expert Agent AI Systems for Maritime Navigation"

requires-python = '>= 3.12'

dependencies = ['Dana == 0.5.5.dev2']

[build-system]
requires = ['setuptools >= 80.9']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = []

[tool.uv]
override-dependencies = []
